Add unit tests for auth, user, order, reservation and table services